--- a/src/config/logging.conf
+++ b/src/config/logging.conf
@@ -3,9 +3,8 @@
 # https://www.internalpointers.com/post/logging-python-sub-modules-and-configuration-files
 # and changed it to my needs
 
-
 [loggers]
-keys=root,dev,prod
+keys=root,dev,acc,prod
 
 [handlers]
 keys=fileHandler, consoleHandler, timedRotatingFileHandler
@@ -26,6 +25,12 @@ qualname=prod
 level=DEBUG
 handlers=timedRotatingFileHandler, consoleHandler
 qualname=dev
+propagate=0
+
+[logger_acc]
+level=DEBUG
+handlers=timedRotatingFileHandler, consoleHandler
+qualname=acc
 propagate=0
 
 [handler_consoleHandler]
